--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -92,3 +92,25 @@
     }
   }
 }
+
+.s-boost {
+  padding: 11.2rem 0 6.7rem;
+  .container {
+    display: flex;
+    align-items: flex-start;
+  }
+  .left {
+    flex: 1;
+    max-width: 27rem;
+    .mockup {
+      width: 100%;
+      height: 56.5rem;
+      img {
+        max-width: initial;
+        position: relative;
+        top: -3.9rem;
+        left: -4.9rem;
+      }
+    }
+  }
+}
