--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -98,6 +98,7 @@
   .container {
     display: flex;
     align-items: flex-start;
+    gap: 14.6rem;
   }
   .left {
     flex: 1;
@@ -146,6 +147,122 @@
         display: flex;
         flex-direction: column;
         gap: 1.6rem;
+      }
+    }
+  }
+  .right {
+    flex: 1;
+    max-width: 80rem;
+    h2 {
+      color: var(--GRAY-800);
+      font-size: 4rem;
+      font-weight: 600;
+      line-height: 120%;
+      letter-spacing: -1px;
+      max-width: 46.3rem;
+      margin-bottom: 5.6rem;
+    }
+    .list {
+      width: 100%;
+      margin-bottom: 3.2rem;
+      max-width: 69.7rem;
+      li {
+        display: flex;
+        align-items: center;
+        gap: 2.4rem;
+        border-bottom: 1px solid #dfe1e8;
+        padding: 4rem 0 3.2rem;
+        &:first-child {
+          padding-top: 0;
+        }
+        .text {
+          h4 {
+            color: var(--GRAY-800);
+            font-size: 2.4rem;
+            font-weight: 600;
+            line-height: 150%;
+            letter-spacing: -0.5px;
+            margin-bottom: 0.2rem;
+          }
+          p {
+            color: var(--GRAY-600);
+            font-size: 1.8rem;
+            line-height: 27px;
+          }
+        }
+      }
+    }
+    .btn {
+      position: relative;
+      display: inline-block;
+      color: var(--BLUE);
+      font-size: 1.6rem;
+      font-weight: 500;
+      line-height: 112%;
+      letter-spacing: -0.5px;
+      &:after {
+        content: "";
+        height: 3px;
+        width: 10px;
+        background: var(--YELLOW);
+        position: absolute;
+        bottom: 0.4rem;
+        right: -1.8rem;
+      }
+    }
+    .box {
+      width: 100%;
+      height: 41rem;
+      border-radius: 1rem;
+      background: linear-gradient(114deg, #1a0078 -25.6%, #6f47ff 121.77%);
+      margin-top: 12.8rem;
+      display: flex;
+      align-items: center;
+      padding-left: 7.2rem;
+      .text {
+        flex: 1;
+        max-width: 38rem;
+        h3 {
+          color: var(--GRAY-100);
+          font-size: 4rem;
+          font-weight: 600;
+          letter-spacing: -2px;
+        }
+        h5 {
+          color: var(--GRAY-100);
+          font-size: 2.8rem;
+          font-weight: 500;
+          line-height: 120%;
+          letter-spacing: -1px;
+          margin: 0.8rem 0;
+        }
+        p {
+          color: var(--GRAY-200);
+          font-size: 1.6rem;
+          line-height: 150%;
+          margin-bottom: 3.2rem;
+        }
+        ul {
+          display: flex;
+          align-items: center;
+          gap: 1.6rem;
+          li {
+            button {
+              border-radius: 12.2rem;
+              background: var(--YELLOW);
+              padding: 1.4rem 1.8rem;
+              color: #855b35;
+              font-size: 1.6rem;
+              font-weight: 700;
+              width: 13.2rem;
+              text-align: center;
+            }
+          }
+        }
+      }
+      .card {
+        position: relative;
+        left: 3.2rem;
       }
     }
   }
