--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -270,7 +270,7 @@
 
 .s-depositions {
   padding-top: 6.7rem;
-  padding-bottom: 84.5rem;
+  padding-bottom: 8.45rem;
   .title {
     display: flex;
     align-items: flex-end;
@@ -329,6 +329,91 @@
       color: var(--GRAY-600);
       font-size: 1.8rem;
       line-height: 150%;
+    }
+  }
+}
+
+.s-account {
+  padding: 8.75rem 0 14.1rem;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  .left {
+    flex: 1;
+    max-width: 53.2rem;
+    h2 {
+      color: #abafba;
+      opacity: 0.8;
+      font-size: 4rem;
+      font-weight: 600;
+      line-height: 112%;
+      letter-spacing: -1px;
+      margin-bottom: 4.8rem;
+      strong {
+        display: block;
+        color: var(--GRAY-800);
+        font-family: "Poppins", sans-serif;
+        font-size: 4rem;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -1px;
+      }
+    }
+    ul {
+      li {
+        display: flex;
+        align-items: center;
+        gap: 2.4rem;
+        &:not(:last-child) {
+          margin-bottom: 4.8rem;
+        }
+        .text {
+          flex: 1;
+          h4 {
+            color: var(--GRAY-800);
+            font-family: "Poppins", sans-serif;
+            font-size: 2rem;
+            font-weight: 600;
+            line-height: 150%;
+            letter-spacing: -0.5px;
+          }
+          p {
+            color: var(--GRAY-600);
+            font-size: 1.8rem;
+            line-height: 150%;
+            margin-top: 0.2rem;
+          }
+        }
+      }
+    }
+    .btn {
+      background: var(--YELLOW);
+      padding: 1.2rem 2.2rem;
+      border-radius: 12.2rem;
+      color: var(--BROWN);
+      font-family: "Poppins", sans-serif;
+      font-size: 1.6rem;
+      font-weight: 600;
+      margin-top: 4.8rem;
+    }
+  }
+  .right {
+    position: relative;
+    flex: 1;
+    max-width: 47.9rem;
+    height: 52.9rem;
+    .mockup {
+      position: absolute;
+      &.one {
+        bottom: -6rem;
+        left: -5rem;
+      }
+      &.two {
+        top: -4rem;
+        right: -5rem;
+      }
     }
   }
 }
