--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,18 @@
 footer {
+  position: relative;
   background-color: var(--PURPLE-10);
   padding: 4rem 0;
+  &:after {
+    content: "";
+    width: 100%;
+    max-width: 121.6rem;
+    height: 0.4rem;
+    background: var(--YELLOW);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin-left: -60.8rem;
+  }
   .area-social {
     display: flex;
     align-items: center;
@@ -27,6 +39,9 @@ footer {
     display: flex;
     justify-content: flex-start;
     justify-content: space-between;
+    padding-bottom: 5.6rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    margin-bottom: 2.4rem;
     .left {
       flex: 1;
       max-width: 84.1rem;
@@ -52,6 +67,48 @@ footer {
             }
           }
         }
+      }
+    }
+    .right {
+      flex: 1;
+      max-width: 29.9rem;
+      a {
+        display: flex;
+        align-items: center;
+        border-radius: 0.6rem;
+        background: rgba(255, 255, 255, 0.04);
+        padding: 2.6rem 1.5rem 2.6rem 2.4rem;
+        gap: 1.6rem;
+        &:not(:last-child) {
+          margin-bottom: 2.4rem;
+        }
+        .description {
+          strong {
+            color: var(--WHITE);
+            font-size: 1.4rem;
+            font-weight: 600;
+            line-height: 150%;
+          }
+          p {
+            color: var(--WHITE);
+            font-size: 1.4rem;
+            line-height: 150%;
+          }
+        }
+      }
+    }
+  }
+  .copy {
+    .text {
+      display: flex;
+      align-items: flex-start;
+      gap: 1.6rem;
+      p {
+        flex: 1;
+        max-width: 66rem;
+        color: var(--WHITE);
+        font-size: 1.4rem;
+        opacity: 0.8;
       }
     }
   }
