--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -46,4 +46,31 @@ header {
       }
     }
   }
+  .btn-mobile {
+    display: none;
+  }
+  @media (max-width: 1200px) {
+    .right {
+      max-width: 81.6rem;
+      nav {
+        gap: 3rem;
+      }
+    }
+  }
+  @media (max-width: 1050px) {
+    .right {
+      max-width: 74.6rem;
+      nav {
+        gap: 2rem;
+      }
+    }
+  }
+  @media (max-width: 991px) {
+    .right {
+      display: none;
+    }
+    .btn-mobile {
+      display: block;
+    }
+  }
 }
