--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -91,6 +91,123 @@
       }
     }
   }
+  @media (max-width: 1200px) {
+    height: 63.4rem;
+    padding-top: 16rem;
+    .left {
+      max-width: 52.1rem;
+      h3 {
+        font-size: 2rem;
+        margin-bottom: 2rem;
+      }
+      h1 {
+        font-size: 5rem;
+      }
+      ul {
+        gap: 2rem;
+      }
+    }
+    .right {
+      margin-right: 0;
+      max-width: 48.8rem;
+      h2 {
+        font-size: 4rem;
+        margin-bottom: 5rem;
+      }
+      .cards {
+        .item {
+          &.card-one {
+            max-width: 35rem;
+          }
+          &.card-two {
+            max-width: 25.3rem;
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 1050px) {
+    .right {
+      margin-right: -6rem;
+    }
+  }
+  @media (max-width: 991px) {
+    height: auto;
+    padding-bottom: 6rem;
+    padding-top: 14rem;
+    .container {
+      flex-direction: column;
+      align-items: center;
+      gap: 5rem;
+    }
+    .left {
+      max-width: 100%;
+      text-align: center;
+      ul {
+        justify-content: center;
+        gap: 4rem;
+        li {
+          span {
+            text-align: left;
+          }
+        }
+      }
+    }
+    .right {
+      max-width: 48.8rem;
+      width: 100%;
+      margin-right: 0;
+    }
+  }
+  @media (max-width: 560px) {
+    padding-top: 14.4rem;
+    padding-bottom: 5.5rem;
+    .left {
+      h3 {
+        font-size: 1.6rem;
+        margin-bottom: 1.6rem;
+      }
+      h1 {
+        font-size: 3.2rem;
+        margin-bottom: 2.4rem;
+      }
+      .btn {
+        margin-bottom: 4rem;
+      }
+      ul {
+        flex-direction: column;
+        max-width: 27.5rem;
+        margin: 0 auto;
+        align-items: flex-start;
+
+        li {
+          span {
+            br {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+    .right {
+      max-width: 33.6rem;
+      margin: 0 auto;
+      h2 {
+        display: none;
+      }
+      .cards {
+        height: 24.4rem;
+        .item {
+          &.card-one {
+            max-width: 24.2rem;
+          }
+          &.card-two {
+            max-width: 19.5rem;
+          }
+        }
+      }
+    }
+  }
 }
 
 .s-boost {
