--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -586,6 +586,50 @@
       line-height: 150%;
     }
   }
+  @media (max-width: 1200px) {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+  @media (max-width: 991px) {
+    .title {
+      margin-bottom: 3rem;
+      justify-content: center;
+      text-align: center;
+    }
+    .container {
+      padding: 0;
+    }
+    .slide-depositions {
+      padding: 0 1.5rem;
+    }
+  }
+  @media (max-width: 560px) {
+    padding-top: 5.6rem;
+    padding-bottom: 5.6rem;
+    background-color: var(--WHITE);
+    margin-top: -7.6rem;
+    position: relative;
+    z-index: 2;
+    .title {
+      h2 {
+        font-size: 2.4rem;
+        max-width: 25.5rem;
+        strong {
+          font-size: 2.4rem;
+          text-wrap: balance;
+        }
+      }
+    }
+    .card-deposition {
+      padding: 2.3rem 2rem;
+      .user {
+        margin-bottom: 1rem;
+      }
+      p {
+        font-size: 1.6rem;
+      }
+    }
+  }
 }
 
 .s-account {
@@ -668,6 +712,96 @@
       &.two {
         top: -4rem;
         right: -5rem;
+      }
+    }
+  }
+  @media (max-width: 1200px) {
+    padding: 5rem 0;
+    overflow-x: hidden;
+    .left {
+      max-width: 50rem;
+      h2 {
+        font-size: 3.2rem;
+        strong {
+          font-size: 3.2rem;
+        }
+        ul {
+          li {
+            &:not(:last-child) {
+              margin-bottom: 3rem;
+            }
+            .text {
+              p {
+                font-size: 1.6rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 991px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+      gap: 6rem;
+    }
+    .left {
+      max-width: 100%;
+      text-align: center;
+      h2 {
+        strong {
+          text-wrap: balance;
+        }
+        ul {
+          li {
+            flex-direction: column;
+            gap: 1rem;
+          }
+        }
+      }
+    }
+    .right {
+      flex: initial;
+      width: 100%;
+    }
+  }
+  @media (max-width: 560px) {
+    padding: 4rem 0;
+    .left {
+      h2 {
+        font-size: 2.4rem;
+        margin-bottom: 4rem;
+        strong {
+          font-size: 2.8rem;
+        }
+      }
+      ul {
+        li {
+          .text {
+            h4 {
+              text-wrap: balance;
+            }
+            p {
+              text-wrap: balance;
+            }
+          }
+        }
+      }
+    }
+    .right {
+      max-width: 33.1rem;
+      height: 38.9rem;
+      .mockup {
+        max-width: 24rem;
+        &.one {
+          bottom: -5rem;
+          left: -3.5rem;
+        }
+        &.two {
+          top: -3rem;
+          right: -4rem;
+        }
       }
     }
   }
