--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -112,4 +112,49 @@ footer {
       }
     }
   }
+  @media (max-width: 1200px) {
+    .main-area {
+      gap: 3rem;
+    }
+  }
+  @media (max-width: 991px) {
+    .main-area {
+      flex-direction: column;
+      align-items: center;
+      gap: 6rem;
+      .left {
+        flex-wrap: wrap;
+        gap: 4%;
+        max-width: 100%;
+        width: 100%;
+        .item {
+          width: 48%;
+          text-align: center;
+          &:not(:last-child) {
+            margin-bottom: 4rem;
+          }
+          &:last-child {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 560px) {
+    .area-social {
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+      .social-midia {
+        flex-direction: column;
+      }
+    }
+    .main-area {
+      .left {
+        .item {
+          text-align: left;
+        }
+      }
+    }
+  }
 }
