--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -264,6 +264,14 @@
         display: flex;
         flex-direction: column;
         gap: 1.6rem;
+        li {
+          a {
+            transition: opactiy 0.3s ease;
+            &:hover {
+              opacity: 0.8;
+            }
+          }
+        }
       }
     }
   }
@@ -373,6 +381,10 @@
               font-weight: 700;
               width: 13.2rem;
               text-align: center;
+              transition: filter 0.3s ease;
+              &:hover {
+                filter: brightness(0.9);
+              }
             }
           }
         }
@@ -696,6 +708,10 @@
       font-size: 1.6rem;
       font-weight: 600;
       margin-top: 4.8rem;
+      transition: filter 0.3s ease;
+      &:hover {
+        filter: brightness(0.9);
+      }
     }
   }
   .right {
