--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -83,10 +83,12 @@
           z-index: 2;
           top: 0;
           left: 0;
+          animation: floating 2s infinite ease;
         }
         &.card-two {
           bottom: 0;
           right: 0;
+          animation: floating 2s infinite ease;
         }
       }
     }
@@ -820,5 +822,17 @@
         }
       }
     }
+  }
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
